packet-sigcomp.c: Prevent large shift

https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=1232
Bug: 13641
Change-Id: I6e53d07dd03a5b637ca27884fad32ba5f7a85d0e
Reviewed-on: https://code.wireshark.org/review/21369
Reviewed-by: Michael Mann <mmann78@netscape.net>
(cherry picked from commit a1152a2a1f486e07e861afcc56ab0f16bb9c7a83)
Reviewed-on: https://code.wireshark.org/review/21374